i386: Add AVX2 pragma wrapper for AVX512DQVL intrins

PR target/111051

gcc/ChangeLog:

	* config/i386/avx512vldqintrin.h: Push AVX2 when AVX2 is
	disabled.

gcc/testsuite/ChangeLog:

	PR target/111051
	* gcc.target/i386/pr111051-1.c: New test.